--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <div id="root">
+        
     </div>
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <!-- <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script> -->
     <!-- <script>
        const heading= document.createElement("h1");
        heading .innerHTML="HELLO WORLD";
@@ -20,7 +21,7 @@
     </script>
      -->
 
-     <script src="./app.js">
+     <script type="module" src="./app.js">
        
      </script>
 </body>
